Haciendo la la primera vista

--- a/L02P02_2022CP602_2022HZ651/Views/Shared/_Layout.cshtml
+++ b/L02P02_2022CP602_2022HZ651/Views/Shared/_Layout.cshtml
@@ -36,11 +36,11 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - L02P02_2022CP602_2022HZ651 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
+    <footer class="bg-dark text-white text-center p-3 mt-4">
+        2025-01-04 - REBECA MARGARITA CRUZ POLANCO<br>
+        2025-01-04 - MIRIAN CAROLINA HERNANDEZ ZEPEDA
     </footer>
+    
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
