--- a/L02P02_2022CP602_2022HZ651/Views/Venta/InicioVenta.cshtml
+++ b/L02P02_2022CP602_2022HZ651/Views/Venta/InicioVenta.cshtml
@@ -1,4 +1,4 @@
-﻿@model L02P02_2022CP602_2022HZ651.Models.Cliente
+﻿@model L02P02_2022CP602_2022HZ651.Models.Clientes
 
 @{
     ViewData["Title"] = "Venta de Libros";
