--- a/L02P02_2022CP602_2022HZ651/Views/Venta/IniciarVenta.cshtml
+++ b/L02P02_2022CP602_2022HZ651/Views/Venta/IniciarVenta.cshtml
@@ -11,24 +11,22 @@
         <form asp-action="IniciarVenta" asp-controller="Venta" method="post">
             <div class="mb-3">
                 <label class="form-label">Nombre</label>
-                <input type="text" class="form-control" asp-for="Nombre" required />
+                <input type="text" class="form-control" asp-for="nombre" required />
             </div>
             <div class="mb-3">
                 <label class="form-label">Apellido</label>
-                <input type="text" class="form-control" asp-for="Apellido" required />
+                <input type="text" class="form-control" asp-for="apellido" required />
             </div>
             <div class="mb-3">
                 <label class="form-label">Email</label>
-                <input type="email" class="form-control" asp-for="Email" required />
+                <input type="email" class="form-control" asp-for="email" required />
             </div>
             <div class="mb-3">
                 <label class="form-label">Dirección</label>
-                <input type="text" class="form-control" asp-for="Direccion" required />
+                <input type="text" class="form-control" asp-for="direccion" required />
             </div>
 
             <button type="submit" class="btn btn-primary w-100">Iniciar Venta</button>
         </form>
     </div>
 </div>
-
-
