--- a/L02P02_2022CP602_2022HZ651/Views/Shared/_Layout.cshtml
+++ b/L02P02_2022CP602_2022HZ651/Views/Shared/_Layout.cshtml
@@ -10,28 +10,12 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">L02P02_2022CP602_2022HZ651</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Venta" asp-action="IniciarVenta">Iniciar venta</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <nav class="navbar navbar-dark bg-dark d-flex flex-column justify-content-center align-items-center py-3">
+            <img src="~/img/UNICAES_Logo.png" alt="Logo" width="90" height="90" class="mb-2">
+            <h2 class="text-white mb-0">Venta de Libros</h2>
         </nav>
+
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
@@ -39,7 +23,7 @@
         </main>
     </div>
 
-    <footer class="bg-dark text-white text-center p-3 mt-4">
+    <footer class="bg-dark text-white text-center p-3 mt-auto">
         2025-01-04 - REBECA MARGARITA CRUZ POLANCO<br>
         2025-01-04 - MIRIAN CAROLINA HERNANDEZ ZEPEDA
     </footer>
