--- a/L02P02_2022CP602_2022HZ651/Views/DetalleVenta/DetalleVenta.cshtml
+++ b/L02P02_2022CP602_2022HZ651/Views/DetalleVenta/DetalleVenta.cshtml
@@ -5,11 +5,6 @@
 }
 
 <div class="container mt-4">
-    <div class="text-center bg-dark text-white p-4 rounded">
-        <h2>Venta de Libros</h2>
-        <p>Seleccione los libros y posteriormente ingrese sus datos</p>
-    </div>
-
     <div class="row mt-4">
         <div class="col-md-8">
             <h4 class="text-primary">Libros</h4>
@@ -38,7 +33,9 @@
             <h4 class="text-primary">Total Libros <span id="totalLibros">0</span></h4>
             <div class="card p-3">
                 <p><strong>Total (USD):</strong> $<span id="totalPrecio">0</span></p>
-                <button id="completarCompra" class="btn btn-primary" disabled>Completar</button>
+                <a asp-controller="CerrarVenta" asp-action="CerrarVentaa" class="btn btn-success w-100">
+                   Completar
+                </a>
             </div>
         </div>
     </div>
